[tool.poetry]
name = "ytr"
version = "0"
description = "Yandex.Translate prompt"
authors = ["Lev Vereshchagin <mail@vrslev.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/vrslev/ytr"
keywords = ["cli", "yandex", "translate", "yandex-translate", "translate-api"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: Implementation :: CPython",
  "Natural Language :: English",
  "Natural Language :: Russian",
  "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "~3.10"
httpx = "0.23.0"
rich = "12.4.4"
typer = "0.4.1"

[tool.poetry.dev-dependencies]
black = "22.6.0"
pre-commit = "2.19.0"
pytest = "7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ytr = "ytr:main"

[tool.pyright]
typeCheckingMode = "strict"
reportPrivateUsage = false

[tool.isort]
profile = "black"

[tool.poetry-version-plugin]
source = "git-tag"
